tests/negative/syntax/empty-match/test.smol
package testing;

union Empty {
}

class Test {
	static process(empty Empty) Unit {
		match empty {
		}
	}

	static main() Unit {

	}
}
